--- a/src/config.json
+++ b/src/config.json
@@ -4,9 +4,10 @@
   	"WindowSizeY": 600,
 	"ParticleImage": "assets/particle.png",
 	"Debug": true,
-	"InitNumParticles": 100,
+	"InitNumParticles": 0,
 	"RandomSpawn": true,
 	"SpawnX": 400,
 	"SpawnY": 300,
-	"SpawnRate": 0.3
+	"SpawnRate": 10,
+	"Gravitation" : 0.1
 }
