--- a/src/config.json
+++ b/src/config.json
@@ -1,13 +1,29 @@
 {
 	"WindowTitle": "Project particles",
+
 	"WindowSizeX": 800,
   	"WindowSizeY": 600,
+  	"ExterieurDeLecranXmin": -20,
+	"ExterieurDeLecranXmax": 820,
+	"ExterieurDeLecranYmin": -20,
+	"ExterieurDeLecranYmax": 620,
+
 	"ParticleImage": "assets/particle.png",
 	"Debug": true,
-	"InitNumParticles": 0,
+
+	"InitNumParticles": 1000,
+	"InitSizeParticles": 1,
+	"InitVitesseParticles": 5,
+	"Acceleration": 1,
+
 	"RandomSpawn": true,
 	"SpawnX": 400,
 	"SpawnY": 300,
-	"SpawnRate": 10,
-	"Gravitation" : 0.1
+	"SpawnRate": 150,
+
+	"Gravite" : 0,
+	"Gravitation": -0,
+
+	"Rebond_bords": false,
+	"Rebond_particules": false
 }
