--- a/src/config.json
+++ b/src/config.json
@@ -1,29 +1,32 @@
 {
 	"WindowTitle": "Project particles",
 
-	"WindowSizeX": 800,
-  	"WindowSizeY": 600,
+	"WindowSizeX": 1900,
+  	"WindowSizeY": 950,
   	"ExterieurDeLecranXmin": -20,
-	"ExterieurDeLecranXmax": 820,
+	"ExterieurDeLecranXmax": 1920,
 	"ExterieurDeLecranYmin": -20,
-	"ExterieurDeLecranYmax": 620,
+	"ExterieurDeLecranYmax": 970,
 
 	"ParticleImage": "assets/particle.png",
 	"Debug": true,
 
-	"InitNumParticles": 1000,
-	"InitSizeParticles": 1,
-	"InitVitesseParticles": 5,
-	"Acceleration": 1,
+	"InitNumParticles": 150,
+	"InitSizeParticles": 0.1,
+	"InitVitesseParticles": 0.05,
+	"Acceleration": 0.997,
 
 	"RandomSpawn": true,
 	"SpawnX": 400,
 	"SpawnY": 300,
-	"SpawnRate": 150,
+	"SpawnRate": 0,
 
 	"Gravite" : 0,
-	"Gravitation": -0,
+	"Gravitation": -1,
+	"Merge": true,
 
-	"Rebond_bords": false,
-	"Rebond_particules": false
+	"Rebond_bords": true,
+	"Rebond_particules": false,
+
+	"Duree_Vie": 1000
 }
